<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="lines_activity_title">Businfo - Bus Lines</string>
    <string name="slogan">Bus lines schedules in Herault</string>
    <string name="busline_activity_title">Bus line</string>
    <string name="line_name">Line %1$s</string>
    <string name="line_intra">%1$s intra muros</string>
    <string name="stop_all_schedules_title">All schedules</string>
    <string name="current_network">%1$s Network</string>
    <string name="no_more_stop">No more stop today</string>
    <string name="no_more_stop_short">"    ---    "</string>
    <string name="pick_direction_title">To...</string>
    <string name="toast_current_direction">"To %1$s"</string>
    <string name="toast_null_direction">"Can't show the stations: null direction(s)"</string>
    <string name="toast_station_bookmarked">Station bookmarked</string>
    <string name="toast_no_more_schedule">No sharing: no more schedule today</string>
    <string name="current_line_title">Line %1$s</string>
    <string name="line_direction_title">Direction %s</string>
    <string name="station_line_direction_title">Line %1$s to %2$s</string>
    <string name="all_lines_bookmarks_header">Bookmarked stations</string>
    <string name="quick_actions_header">Quick actions</string>
    <string name="result_city_header">Cities</string>
    <string name="result_station_header">Stations</string>
    <string name="result_line_header">Line %1$s</string>
    <string name="result_lines_header">Lines</string>
    <string name="result_station_subtitle">"Bus station in %1$s"</string>
    <string name="all_lines_header">All lines</string>
    <string name="bookmark_info">Line %1$s to %2$s</string>
    <string name="city_title">City</string>
    <string name="does_not_circulate">Does not circulate</string>
    <string name="next_stop_board_title">Next stop</string>
    <string name="download_title">Downloading bus schedules update. Please wait...</string>

    <string name="home_ht_title">Businfo</string>
    <string name="home_thau_title">Thau Agglo</string>
    <string name="home_tam_title">TAM</string>
    <string name="home_my_bookmarks">My Bookmarks</string>
    <string name="home_bus_networks">My Networks</string>
    <string name="no_bookmark">No schedule</string>

    <string name="bookmark_city">"In %1$s"</string>
    <string name="bookmark_city_eta_hours_hs">"In %1$s, %2$s hour left"</string>
    <string name="bookmark_city_eta_hours_hp">"In %1$s, %2$s hours left"</string>
    <string name="bookmark_city_eta_hours_hs_ms">"In %1$s, %2$s hour %3$s minute left"</string>
    <string name="bookmark_city_eta_hours_hs_mp">"In %1$s, %2$s hour %3$s minutes left"</string>
    <string name="bookmark_city_eta_hours_hp_ms">"In %1$s, %2$s hours %3$s minute left"</string>
    <string name="bookmark_city_eta_hours_hp_mp">"In %1$s, %2$s hours %3$s minutes left"</string>
    <string name="bookmark_city_eta_ms">"In %1$s, %2$s minute left"</string>
    <string name="bookmark_city_eta_mp">"In %1$s, %2$s minutes left"</string>
    <string name="bookmark_city_eta_ms_now">"In %1$s, incoming..."</string>

    <string name="monday_short">M</string>
    <string name="tuesday_short">T</string>
    <string name="wednesday_short">W</string>
    <string name="thursday_short">T</string>
    <string name="friday_short">F</string>
    <string name="saturday_short">S</string>
    <string name="sunday_short">S</string>
    <string name="stop_info_rest_days">"Public holidays too"</string>
    <string name="stop_info_school_days_only">"School days only"</string>
    <string name="stop_info_holidays_only">"Holidays only"</string>

    <string name="suggestion_city_subtitle">"City with %1$s bus line(s)"</string>
    <string name="suggestion_line_subtitle">"Line to %1$s and %2$s"</string>
    <string name="suggestion_station_subtitle">"Bus station in %1$s, %2$s"</string>
    <string name="suggestion_station_served_by_line">"served by line %1$s"</string>
    <string name="suggestion_station_served_by_lines">"served by lines %1$s"</string>

    <string name="line_avail_range">"From %1$s to %2$s"</string>
    <string name="line_avail_from">"Only from %1$s"</string>
    <string name="no_data">No data.</string>
    <string name="search_hint">Enter keyword</string>
    <string name="bookmark_menu_title">Bookmark</string>
    <string name="station_menu_title">This station</string>
    <string name="share_with_title">Share with</string>
    <string name="share_msg">"Station %1$s - line %2$s\n\nNext bus at %3$s.\n\n%4$s.\n\n\n--\nShared from the Businfo application for Android"</string>
    <string name="station_context_title">Station</string>
    <string name="pd_loading_bus_schedules">Loading bus schedules</string>
    <string name="pd_loading_bus_lines">Loading bus lines</string>
    <string name="pd_updating_database">Updating schedules, please wait...</string>
    <string name="pd_searching">Searching...</string>
    <string name="action_speak_destination">Speak keyword</string>
    <string name="action_search">Quick search</string>
    <string name="action_show_all_lines">All lines</string>
    <string name="action_show_settings">Settings</string>
    <string name="result_no_match">No result</string>
    <string name="city_served_by_line">"Served by line %1$s"</string>
    <string name="city_served_by_lines">"Served by lines %1$s"</string>
    <string name="station_served_by_lines">"In %1$s, %2$s"</string>
    <string name="search_keyword">"Search keyword: %1$s"</string>
    <string name="search_results_title">"Search results"</string>

    <string name="menu_preferences">Settings</string>
    <string name="menu_search_title">Search</string>
    <string name="menu_flip_direction_title">Flip direction</string>
    <string name="menu_rate_title">Set as favorite</string>

    <string name="cat_tips_title">Tips</string>
    <string name="cat_tips_sum">Tips on startup</string>
    <string name="pref_tips_startup_title">Tips on startup</string>
    <string name="pref_tips_startup_sumon">Show tips on startup</string>
    <string name="pref_tips_startup_sumoff">Do not show tips on startup</string>
    <string name="pref_tips_show_title">Tips</string>
    <string name="pref_tips_show_summary">Show all tips</string>
    <string name="next_tip">Next</string>
    <string name="disable_tips">Disable</string>
    <string name="close_tips">Close</string>
    <string name="did_you_know">Did you know?</string>

    <string name="cat_maps_title">Map-based Service</string>
    <string name="cat_maps_sum">Google Maps</string>
    <string name="pref_use_city_map_title">City location</string>
    <string name="pref_use_city_map_sumon">Show a map with current city location</string>
    <string name="pref_use_city_map_sumoff">Do not show any map for city location</string>

    <string name="cat_about_title">About</string>
    <string name="cat_about_sum">About application</string>
    <string name="pref_about_version_summary">%1$s - build %2$s</string>
    <string name="pref_about_title">Version</string>
    <string name="pref_website_title">Website</string>
    <string name="pref_oss_title">Businfo is free software (GPL)</string>
    <string name="pref_author_title">Author</string>
    <string name="pref_about_visite_website_title">Visit web site</string>
    <string name="pref_about_changelog_title">ChangeLog</string>
    <string name="pref_about_db_version_title">Bus coverage networks</string>
    <string name="pref_about_db_version_summary">"%3$s networks, %2$s lines, %4$s cities and %5$s stations (v%1$s)"</string>
    <string name="pref_about_network_summary">"%1$s lines"</string>

    <string name="cat_tts_title">Speech Synthesis</string>
    <string name="cat_tts_sum">Text-To-Speech</string>
    <string name="pref_use_tts_title">Use Text-To-Speech</string>
    <string name="pref_use_tts_sumon">Will use speech synthesis (TTS) to read information</string>
    <string name="pref_use_tts_sumoff">Will not use speech synthesis (TTS) at all</string>

    <!-- About app -->
    <string name="pref_about_about_title">About</string>
    <string name="about_description">"Businfo is a free and open source Android application whose goal is to provide an easy way to get bus schedules of the french bus networks \"Hérault Transport\", \"Thau Agglo\" and TAM.\nIt's easy to use and works anytime, anywhere: all schedules are available instantly without using your network connection (off-line mode)!\nNot only can you have schedules, but you can also bookmark favorite bus stations and share them with friends. You can also search information by voice using the voice recognition feature of your Android devices (if supported)."</string>
    <string name="about_description_support">"For any question, bug report or feature request, please visit http://www.businfo.fr or drop an email to contact@businfo.fr."</string>

    <!-- Release notes go there! -->
    <string name="pref_about_release_notes_title">Release notes</string>
    <string name="pref_about_release_notes_summary">"See what's new in this version"</string>
    <string name="release_notes_content">"
Bus34 is now called Businfo!

Hérault transport: updated schedules for the following lines:
- 102 (Montpellier - Sète)
- 106 (Montpellier - Aigues Mortes)
- 232 (Béziers - Olonzac)
- 301/381 (Montpellier - Millau)
- 302 (Montpellier - Clermont l\'Hérault)
- 303/485 (Montpellier - St Pons de Thomières)
- 305 (Montpellier - Aspiran)
- 307 (Clermont l\'Hérault - Plaissan)
- 308 (Montpellier - Clermont l\'Hérault)
- 313 (Bélarga - Montpellier)

You can also search for bus schedules from our website at

http://www.businfo.fr

Thanks for using Businfo!
"</string>
</resources>
