<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:key="root_pref"
	android:title="@string/menu_preferences"
	android:summary="Main preferences for application">
    <!--
	<PreferenceCategory
		android:key="cat_about"
		android:title="@string/cat_tts_title"
		android:summary="@string/cat_tts_sum">
        <CheckBoxPreference
            android:key="pref_use_tts"
            android:title="@string/pref_use_tts_title"
            android:defaultValue="true"
            android:summaryOn="@string/pref_use_tts_sumon"
            android:summaryOff="@string/pref_use_tts_sumoff" />
	</PreferenceCategory>
    -->
	<PreferenceCategory
		android:key="cat_tips"
		android:title="@string/cat_tips_title"
		android:summary="@string/cat_tips_sum">
        <CheckBoxPreference
            android:key="pref_show_tips_at_startup"
            android:title="@string/pref_tips_startup_title"
            android:defaultValue="true"
            android:summaryOn="@string/pref_tips_startup_sumon"
            android:summaryOff="@string/pref_tips_startup_sumoff" />
        <Preference
			android:key="pref_tips_show"
			android:summary="@string/pref_tips_show_summary"
			android:title="@string/pref_tips_show_title" />
	</PreferenceCategory>
	<PreferenceCategory
		android:key="cat_maps_service"
		android:title="@string/cat_maps_title"
		android:summary="@string/cat_maps_sum">
        <CheckBoxPreference
            android:key="pref_use_city_map"
            android:title="@string/pref_use_city_map_title"
            android:defaultValue="true"
            android:summaryOn="@string/pref_use_city_map_sumon"
            android:summaryOff="@string/pref_use_city_map_sumoff" />
	</PreferenceCategory>
	<PreferenceCategory
		android:key="cat_about"
		android:title="@string/cat_about_title"
		android:summary="@string/cat_about_sum">
        <Preference
            android:key="pref_about_about"
            android:title="@string/pref_about_about_title"/>
		<Preference
			android:key="pref_about_release_notes"
            android:summary="@string/pref_about_release_notes_summary"
			android:title="@string/pref_about_release_notes_title" />
        <Preference
            android:key="pref_about_changelog"
            android:title="@string/pref_about_changelog_title"/>
            <!--
		<Preference
			android:key="pref_about_visite_website"
			android:title="@string/pref_about_visite_website_title"/>
            -->
		<Preference
			android:key="pref_about_db_version"
			android:title="@string/pref_about_db_version_title"
			android:summary="@string/dbversion"
			android:enabled="false" />
		<Preference
			android:key="pref_about_version"
			android:title="@string/pref_about_title"
			android:enabled="false"
			android:summary="@string/app_version" />
		<Preference
			android:key="pref_author"
			android:title="@string/pref_author_title"
			android:enabled="false"
			android:summary="@string/app_author" />
	</PreferenceCategory>
</PreferenceScreen> 
